fetchedResultsController, additional example model, example of predicateWithFormat and argument

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ resources/*.nib
 resources/*.momd
 resources/*.storyboardc
 examples/**/*.nib
+vendor/motion_data/ext/build-iPhoneSimulator/*.a
 tags
